[package]
name = "project3-zjh"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.12.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.12.0"
tokio = "1.26.0"
chinese_dictionary = "2.1.2"

